# BBBP-Pred

./: .gitignore  README.md  pyproject.toml
data/: data_load.py
model/: compare_conformer_strategies.py  hyperparameter_search_all_conformers.py  test_random_conformer.py  unimol_custom_split.py  unimol_tool.py
